[project]
name = "mamba_ssm"
description = "Mamba state-space model"
readme = "README.md"
authors = [
    { name = "Tri Dao", email = "tri@tridao.me" },
    { name = "Albert Gu", email = "agu@cs.cmu.edu" }
]
requires-python = ">= 3.9, < 3.13"
dynamic = ["version"]
license = { file = "LICENSE" }  # Include a LICENSE file in your repo
keywords = ["cuda", "pytorch", "state-space model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]
dependencies = [
    "torch==2.6.0",
    "triton",
    "ninja",
    "einops",
    "transformers",
    "packaging",
    "setuptools>=61.0.0",
]
[project.urls]
Repository = "https://github.com/state-spaces/mamba"

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d @ git+https://github.com/KatherLab/causal-conv1d.git@5d231fb1088220e1ff48d71ba16c64c5133e23d4"
]
dev = [
    "pytest"
]


[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch==2.6.0",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"
